fix(css): Hide overflow on html tag.

--- a/src/index.less
+++ b/src/index.less
@@ -1,22 +1,26 @@
 @import "antd/dist/antd.less";
 @import "common/ant-override.less";
 
+html {
+	overflow: hidden;
+}
+
 body {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  margin: 0;
-  font-family: @font-family;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	margin: 0;
+	font-family: @font-family;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 #root {
-  height: 100%;
-  width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
